feat : 인덱스 성능 측정용 api 개발 완료 - 단일 인덱스 뿐 아니라, 복합 인덱스도 추가할 수 있도록 구성

--- a/8_index/toy/index_test/src/main/resources/application.yml
+++ b/8_index/toy/index_test/src/main/resources/application.yml
@@ -17,3 +17,6 @@ spring:
         show_sql: true
         format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
+        cache:
+          use_second_level_cache: false  # 정확한 인덱싱 측정을 위한 캐시 끄기
+          use_query_cache: false # default가 false로 되어 있음
